Miscellaneous fixes
Added a Long Type to fix errors in the metadata reader caused by reading integers greater than 2^31
Enclosed in  try/catch all decoding of numbers from the yaml files
Added support for sldyz and npyz files, which store the data compressed, using the zstd codecs
Added support of 2D timelapse dats stored in a single file (SFMT -> Single File Multi Timpoint)
Fixed GetVoxelSize to accont for magnification
Fixed bugs in the usage of the string substring method
Fixed allocation of byte buffer to read a plane. Allocation was twice as large as needed.
Added code to import ROI's annotations when Metadata level is not Minimum
Fixed adding Plane Exposure Time to metadata store
Fixed error: "YAMLException: The incoming YAML document exceeds the limit: 3145728 code points." for very large yaml files by using yaml LoaderOptions setCodePointLimit.